--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Velin Achev",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   },
   "devDependencies": {
